test/trivial/deitz/test_use_before_def1.chpl
writeln(x);
var x : int = 12;
